Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -111,9 +111,10 @@ html, .product-list {
 /* WebKit */
 body::-webkit-scrollbar, .product-list::-webkit-scrollbar{
     display: none;
+    width: 0 !important;
 }
 
 /* Edge */
-body, .product-list {
+html, .product-list {
     -ms-overflow-style: none;
 }
